2003-02-18  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol (do_options): Better option error checking.

2003-02-17  Will Cohen  <wcohen@redhat.com>

	* pp/format_output.h (show_help): namespace std.

2003-02-17  Will Cohen  <wcohen@redhat.com>

	* TODO: update.

2003-02-17  Philippe Elie  <phil.el@wanadoo.fr>

	From Anton Blanchard :

	* daemon/opd_image.c: cookie_t fix for 64 bits

2003-02-17  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* libopt++/popt_options.cpp:
	* libopt++/popt_options.h: handle an user specific additional
	  help string

	* pp/output_format.h:
	* pp/output_format.cpp:
	* pp/op_time_options.cpp:
	* pp/oprofpp_options.cpp: use it to show in --output_format
	  options details.

2003-02-14  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* pp/oprofpp_options.cpp: allow --show-shared-libs with -s

2003-02-13  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* pp/output_format.h:
	* pp/output_format.cpp: fix #686272, crash when using
	  oprofpp -s symb_name.

2003-02-13  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_kernel.h:
	* dae/opd_image.h:
	* dae/opd_image.c: don't use hash entry zero for kernel image
	 fix #686175

2003-02-13  Will Cohen  <wcohen@redhat.com>

	* daemon/opd_cookie.h(opd_nr_lookup_dcookie): Correct number.

2003-02-13  Will Cohen  <wcohen@redhat.com>

	* daemon/opd_cookie.h(opd_nr_lookup_dcookie): Add x86_64.

2003-02-13  John Levon  <levon@movementarian.org>

	* dae/opd_image.c: little cleanup and fix error message
	  to not lie

2003-02-12  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.1.in:
	* doc/oprofile.xml: enhance doc about --separate=kernel

	* utils/opcontrol: handle gracefully opcontrol --deinit if profiler
	  was already shutdown. Avoid wrong warning when umount /dev/oprofile

2003-02-12  Will Cohen  <wcohen@redhat.com>

	* gui/oprof_start.cpp (oprof_start::oprof_start,
	    oprof_start::on_flush_profiler_data,
	    oprof_start::on_start_profiler,